@@ -1,3 +1,13 @@
+2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* unix/tcl.m4:       Cross-compile support for Win and UNIX (backported)
+	* unix/configure:    (autoconf-2.59)
+	* win/tcl.m4:
+	* win/configure.in:
+	* win/configure:     (autoconf-2.59)
+	* win/tkWin32Dll.c:  SEH-emulation for AMD64
+	* win/tkWinX.c:      mingw-w64 does not accept _WIN32_IE < 0x0501
+
 2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>
 
 	* unix/tcl.m4: Better building on OpenBSD.
